get ta building and passing tests

--- a/Tests/bubbleSort/CMakeLists.txt
+++ b/Tests/bubbleSort/CMakeLists.txt
@@ -19,7 +19,7 @@ set_tests_properties(bubbleSort_tik PROPERTIES DEPENDS bubbleSort_cartographer)
 add_test(NAME bubbleSort_ts COMMAND tikSwap -g -t ${CMAKE_CURRENT_BINARY_DIR}/tik.bc -b $<TARGET_FILE:bubbleSort> -o ${CMAKE_CURRENT_BINARY_DIR}/tikSwap.bc)
 set_tests_properties(bubbleSort_ts PROPERTIES DEPENDS bubbleSort_tik)
 
-add_test(NAME bubbleSort_swap COMMAND ${CMAKE_CXX_COMPILER} -lz ${CMAKE_CURRENT_BINARY_DIR}/tik.bc ${CMAKE_CURRENT_BINARY_DIR}/tikSwap.bc ${CMAKE_BINARY_DIR}/lib/libAtlasBackend.a -o ${CMAKE_CURRENT_BINARY_DIR}/swap.exec)
+add_test(NAME bubbleSort_swap COMMAND ${CMAKE_CXX_COMPILER} ${CMAKE_CURRENT_BINARY_DIR}/tik.bc ${CMAKE_CURRENT_BINARY_DIR}/tikSwap.bc ${CMAKE_BINARY_DIR}/lib/libAtlasBackend.a -o ${CMAKE_CURRENT_BINARY_DIR}/swap.exec)
 set_tests_properties(bubbleSort_swap PROPERTIES DEPENDS bubbleSort_ts)
 
 add_test(NAME bubbleSortSwap_run COMMAND ${CMAKE_CURRENT_BINARY_DIR}/swap.exec)
